# blockscope

./: .gitignore  LICENSE  README.md  blockscope.py  pyproject.toml
test/: test_blockscope.py
