[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "blockscope"
authors = [{name = "Anton Petersen", email = "quarkatron@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.5"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/anptrs/blockscope"
